WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118174
[wk2] WKView shouldn't force scrolling off if shouldClipToVisibleRect is set
https://bugs.webkit.org/show_bug.cgi?id=118174
Summary
[wk2] WKView shouldn't force scrolling off if shouldClipToVisibleRect is set
Tim Horton
Reported
2013-06-28 02:19:19 PDT
Instead, there should be (throughout the stack from WKView to TiledCoreAnimationDrawingArea) another property that clipsToExposedRect/shouldClipToVisibleRect should be keyed off of, instead of main frame scrollability.
Attachments
preliminary
(11.90 KB, patch)
2013-06-28 03:05 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
patch
(14.79 KB, patch)
2013-06-28 13:22 PDT
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-06-28 02:19:37 PDT
<
rdar://problem/14301175
>
Tim Horton
Comment 2
2013-06-28 03:05:40 PDT
Created
attachment 205686
[details]
preliminary
Tim Horton
Comment 3
2013-06-28 13:22:42 PDT
Created
attachment 205737
[details]
patch
Tim Horton
Comment 4
2013-06-28 15:16:40 PDT
http://trac.webkit.org/changeset/152190
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug